# tickit_app_backend

./: README.md
tickit_project/: pyproject.toml  render.yaml  settings.sql
tickit_project/mysite/: pyproject.toml
tickit_project/mysite/mysite/: settings.py
tickit_project/tickit/: admin.py  models.py  serializers.py  urls.py  views.py
tickit_project/tickit/migrations/: 0001_initial.py  0002_event.py  0003_ticket.py  0004_event_image_url.py  0005_remove_event_image_url.py  0006_event_image_url.py
tickit_project/tickit_django/: settings.py  urls.py
tickit_project/tickit_project/: manage.py
